--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@vis.gl/react-google-maps": "^1.5.3",
     "axios": "^1.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
