--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.1.2",
     "@vis.gl/react-google-maps": "^1.5.3",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3"
